able to parse JSON data and display in popup properly

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
         "48": "icons/48.png"
     },
     "permissions": [
-        "activeTab"
+        "activeTab",
+        "geolocation"
     ],
     "applications": {
         "gecko": {
